apps/k3s/jellyfin/jellyfin.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: jellyfin
  labels:
    app.kubernetes.io/instance: jellyfin
    app.kubernetes.io/name: jellyfin
  annotations:
spec:
  type: ClusterIP
  ports:
  - port: 8096
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app.kubernetes.io/name: jellyfin
    app.kubernetes.io/instance: jellyfin
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyfin
  labels:
    app.kubernetes.io/instance: jellyfin
    app.kubernetes.io/name: jellyfin
spec:
  revisionHistoryLimit: 3
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: jellyfin
      app.kubernetes.io/instance: jellyfin
  template:
    metadata:
      labels:
        app.kubernetes.io/name: jellyfin
        app.kubernetes.io/instance: jellyfin
    spec:
      serviceAccountName: default
      automountServiceAccountToken: true
      dnsPolicy: ClusterFirst
      enableServiceLinks: true
      containers:
        - name: jellyfin
          image: "lscr.io/linuxserver/jellyfin:latest"
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8096
              protocol: TCP
          volumeMounts:
            - name: config
              mountPath: /config
            - name: data
              mountPath: /data
          livenessProbe:
            tcpSocket:
              port: 8096
            failureThreshold: 5
            initialDelaySeconds: 60
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 10
          readinessProbe:
            tcpSocket:
              port: 8096
            initialDelaySeconds: 0
            failureThreshold: 3
            timeoutSeconds: 1
            periodSeconds: 10
          startupProbe:
            tcpSocket:
              port: 8096
            initialDelaySeconds: 0
            failureThreshold: 30
            timeoutSeconds: 1
            periodSeconds: 5
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: jellyfin-config
        - name: data
          persistentVolumeClaim:
            claimName: jellyfin-media
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jellyfin
  labels:
    app.kubernetes.io/instance: jellyfin
    app.kubernetes.io/name: jellyfin
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod-desec
    traefik.ingress.kubernetes.io/router.middlewares: kube-system-redirect-https@kubernetescrd,kube-system-hsts-headers@kubernetescrd
spec:
  tls:
    - hosts:
        - "jellyfin.bigli.io"
      secretName: "jellyfin-tls"
  rules:
    - host: "jellyfin.bigli.io"
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: jellyfin
                port:
                  number: 8096
